data/contextbench_phase1/stripped/raw_transcripts/000192_a32569b0.txt
STRIPPED RAW CLAUDE CODE TRAJECTORY
This transcript was rendered from original raw JSONL using the canonical ADP strip manifest.

[RAW line 2 USER]
PRIOR ISSUE METADATA
repo: django/django
instance_id: django__django-11099
base_commit: d26b2424437dabeeca94d7900b37d2df4410da0c
problem_statement:
UsernameValidator allows trailing newline in usernames
Description

ASCIIUsernameValidator and UnicodeUsernameValidator use the regex
r'^[\w.@+-]+
The intent is to only allow alphanumeric characters as well as ., @, +, and -. However, a little known quirk of Python regexes is that $ will also match a trailing newline. Therefore, the user name validators will accept usernames which end with a newline. You can avoid this behavior by instead using \A and \Z to terminate regexes. For example, the validator regex could be changed to
r'\A[\w.@+-]+\Z'
in order to reject usernames that end with a newline.
I am not sure how to officially post a patch, but the required change is trivial - using the regex above in the two validators in contrib.auth.validators.
[RAW line 5 TOOL Bash]

[RAW line 6 TOOL Grep]
{
  "output_mode": "files_with_matches",
  "pattern": "UsernameValidator"
}
[RAW line 11 TOOL Bash]
find ./swebench_9_15 -path "*/contrib/auth/validators.py" 2>/dev/null
[RAW line 18 TOOL Bash]
ls -la ./swebench_9_15/*.py
[RAW line 19 TOOL RESULT toolu_01N6kPfYWzpyB4i7CsLXtYNL]
-rw-------@ 1 user  staff  15838 23 Nov 00:26 ./swebench_9_15/calculate_session_usage.py
[RAW line 37 TOOL Bash]
find testbed -path "*/contrib/auth/validators.py"
[RAW line 39 TOOL RESULT toolu_01B4iP3pyZSf3WCcQu2jVwDJ]
testbed/django/contrib/auth/validators.py
[RAW line 41 TOOL Read]
{
  "file_path": "./swebench_9_15/testbed/django/contrib/auth/validators.py"
}
[RAW line 42 TOOL RESULT toolu_01EYhvgNnjYiN1g5j5oBY78z]
     1Ôćĺimport re
     2Ôćĺ
     3Ôćĺfrom django.core import validators
     4Ôćĺfrom django.utils.deconstruct import deconstructible
     5Ôćĺfrom django.utils.translation import gettext_lazy as _
     6Ôćĺ
     7Ôćĺ
     8Ôćĺ@deconstructible
     9Ôćĺclass ASCIIUsernameValidator(validators.RegexValidator):
    10Ôćĺ    regex = r'^[\w.@+-]+$'
    11Ôćĺ    message = _(
    12Ôćĺ        'Enter a valid username. This value may contain only English letters, '
    13Ôćĺ        'numbers, and @/./+/-/_ characters.'
    14Ôćĺ    )
    15Ôćĺ    flags = re.ASCII
    16Ôćĺ
    17Ôćĺ
    18Ôćĺ@deconstructible
    19Ôćĺclass UnicodeUsernameValidator(validators.RegexValidator):
    20Ôćĺ    regex = r'^[\w.@+-]+$'
    21Ôćĺ    message = _(
    22Ôćĺ        'Enter a valid username. This value may contain only letters, '
    23Ôćĺ        'numbers, and @/./+/-/_ characters.'
    24Ôćĺ    )
    25Ôćĺ    flags = 0
    26Ôćĺ

[RAW line 47 TOOL Edit]
{
  "file_path": "./swebench_9_15/testbed/django/contrib/auth/validators.py",
  "new_text_sha256": "f8554c077840bb009495f7637491eac896a6cd6c94d8d448be3fa8e130fcae12",
  "old_text_sha256": "f90e7ec1591462a1c765a170abc81ef9da7f33cea1202e6dcc84024fbba85c15"
}
[RAW line 51 TOOL Edit]
{
  "file_path": "./swebench_9_15/testbed/django/contrib/auth/validators.py",
  "new_text_sha256": "825982d08405fa298f6d9b782bf3c412e85ae676e905f7915d71d56bedc7424d",
  "old_text_sha256": "82246778cdd004aaa7e63390da84b7625d0363cf52efede6785bcb9bbcf569df"
}
[RAW line 54 TOOL Read]
{
  "file_path": "./swebench_9_15/testbed/django/contrib/auth/validators.py"
}
[RAW line 55 TOOL RESULT toolu_01DpivhddsgZHHm686cMtHo9]
     1Ôćĺimport re
     2Ôćĺ
     3Ôćĺfrom django.core import validators
     4Ôćĺfrom django.utils.deconstruct import deconstructible
     5Ôćĺfrom django.utils.translation import gettext_lazy as _
     6Ôćĺ
     7Ôćĺ
     8Ôćĺ@deconstructible
     9Ôćĺclass ASCIIUsernameValidator(validators.RegexValidator):
    10Ôćĺ    regex = r'\A[\w.@+-]+\Z'
    11Ôćĺ    message = _(
    12Ôćĺ        'Enter a valid username. This value may contain only English letters, '
    13Ôćĺ        'numbers, and @/./+/-/_ characters.'
    14Ôćĺ    )
    15Ôćĺ    flags = re.ASCII
    16Ôćĺ
    17Ôćĺ
    18Ôćĺ@deconstructible
    19Ôćĺclass UnicodeUsernameValidator(validators.RegexValidator):
    20Ôćĺ    regex = r'\A[\w.@+-]+\Z'
    21Ôćĺ    message = _(
    22Ôćĺ        'Enter a valid username. This value may contain only letters, '
    23Ôćĺ        'numbers, and @/./+/-/_ characters.'
    24Ôćĺ    )
    25Ôćĺ    flags = 0
    26Ôćĺ

[RAW line 64 TOOL Bash]
python test_issue.py
[RAW line 65 TOOL RESULT toolu_01NdpdQuMsj7GHB6Fvw8h7ZM]
Exit code 1
  File "test_issue.py", line 45
SyntaxError: Non-ASCII character '\xe2' in file test_issue.py on line 45, but no encoding declared; see http://www.python.org/peps/pep-0263.html for details
[RAW line 70 TOOL Bash]
python test_issue.py
[RAW line 71 TOOL RESULT toolu_01NNxNAZoZS5UvUuZQZUzAeR]
Exit code 1
  File "test_issue.py", line 47
    print(f"{status} {description}: '{repr(username)}' -> {result}")
                                                                  ^
SyntaxError: invalid syntax
[RAW line 76 TOOL Bash]
python test_issue.py
[RAW line 77 TOOL RESULT toolu_01CiK8PxpEF5CL9iAJDruaAg]
Exit code 1
Traceback (most recent call last):
  File "test_issue.py", line 6, in <module>
    import django
ImportError: No module named django
[RAW line 79 TOOL Bash]
cd testbed && python -c "
import re
from django.contrib.auth.validators import ASCIIUsernameValidator, UnicodeUsernameValidator
from django.core.exceptions import ValidationError

print('Testing ASCIIUsernameValidator:')
print('=' * 60)
ascii_validator = ASCIIUsernameValidator()

test_cases = [
    ('validuser', True, 'Normal username'),
    ('user.name', True, 'Username with dot'),
    ('user@domain', True, 'Username with @'),
    ('validuser\n', False, 'Username with trailing newline'),
]

for username, should_be_valid, description in test_cases:
    try:
        ascii_validator(username)
        result = 'VALID'
    except ValidationError:
        result = 'INVALID'

    expected = 'VALID' if should_be_valid else 'INVALID'
    status = 'PASS' if (result == expected) else 'FAIL'
    print('{} {}: {} -> {}'.format(status, description, repr(username), result))

print('\nTesting UnicodeUsernameValidator:')
print('=' * 60)
unicode_validator = UnicodeUsernameValidator()

for username, should_be_valid, description in test_cases:
    try:
        unicode_validator(username)
        result = 'VALID'
    except ValidationError:
        result = 'INVALID'

    expected = 'VALID' if should_be_valid else 'INVALID'
    status = 'PASS' if (result == expected) else 'FAIL'
    print('{} {}: {} -> {}'.format(status, description, repr(username), result))
"
[RAW line 80 TOOL RESULT toolu_01Nq2yABp5dPk9pPSru7xNfD]
Exit code 1
Traceback (most recent call last):
  File "<string>", line 3, in <module>
  File "django/__init__.py", line 1, in <module>
    from django.utils.version import get_version
  File "django/utils/version.py", line 71, in <module>
    @functools.lru_cache()
AttributeError: 'module' object has no attribute 'lru_cache'
[RAW line 82 TOOL Bash]
cd testbed && python3 -c "
import re
from django.contrib.auth.validators import ASCIIUsernameValidator, UnicodeUsernameValidator
from django.core.exceptions import ValidationError

print('Testing ASCIIUsernameValidator:')
print('=' * 60)
ascii_validator = ASCIIUsernameValidator()

test_cases = [
    ('validuser', True, 'Normal username'),
    ('user.name', True, 'Username with dot'),
    ('user@domain', True, 'Username with @'),
    ('validuser\n', False, 'Username with trailing newline'),
]

for username, should_be_valid, description in test_cases:
    try:
        ascii_validator(username)
        result = 'VALID'
    except ValidationError:
        result = 'INVALID'

    expected = 'VALID' if should_be_valid else 'INVALID'
    status = 'PASS' if (result == expected) else 'FAIL'
    print('{} {}: {} -> {}'.format(status, description, repr(username), result))

print('\nTesting UnicodeUsernameValidator:')
print('=' * 60)
unicode_validator = UnicodeUsernameValidator()

for username, should_be_valid, description in test_cases:
    try:
        unicode_validator(username)
        result = 'VALID'
    except ValidationError:
        result = 'INVALID'

    expected = 'VALID' if should_be_valid else 'INVALID'
    status = 'PASS' if (result == expected) else 'FAIL'
    print('{} {}: {} -> {}'.format(status, description, repr(username), result))
"
[RAW line 83 TOOL RESULT toolu_01VhdaKmtoiiF3zEBvSVA2uF]
Testing ASCIIUsernameValidator:
============================================================
PASS Normal username: 'validuser' -> VALID
PASS Username with dot: 'user.name' -> VALID
PASS Username with @: 'user@domain' -> VALID
PASS Username with trailing newline: 'validuser\n' -> INVALID

Testing UnicodeUsernameValidator:
============================================================
PASS Normal username: 'validuser' -> VALID
PASS Username with dot: 'user.name' -> VALID
PASS Username with @: 'user@domain' -> VALID
PASS Username with trailing newline: 'validuser\n' -> INVALID
Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

  Traceback (most recent call last):
    File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
      exec(line)
    File "<string>", line 1, in <module>
    File "<frozen importlib._bootstrap>", line 553, in module_from_spec
  AttributeError: 'NoneType' object has no attribute 'loader'

Remainder of file ignored
